--- a/env/LINUX/environment.yml
+++ b/env/LINUX/environment.yml
@@ -1,6 +1,7 @@
 name: quantumoonlight
 channels:
   - defaults
+  - conda-forge
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
@@ -25,6 +26,7 @@ dependencies:
   - libstdcxx-ng=11.2.0=h1234567_1
   - libuuid=1.41.5=h5eee18b_0
   - markupsafe=2.1.1=py37h7f8727e_0
+  - mysqlclient=1.3.13=py36_1000
   - ncurses=6.4=h6a678d5_0
   - openssl=1.1.1t=h7f8727e_0
   - pip=22.3.1=py37h06a4308_0
@@ -69,6 +71,8 @@ dependencies:
     - kiwisolver==1.4.4
     - lxml==4.9.2
     - matplotlib==3.5.0
+    - mysql-connector==2.2.9
+    - mysql-connector-python==8.0.28
     - more-itertools==9.1.0
     - mpmath==1.3.0
     - multitasking==0.0.11
