--- a/.github/workflows/test-python-conda.yml
+++ b/.github/workflows/test-python-conda.yml
@@ -1,4 +1,4 @@
-name: Python Package using Conda
+name: Test Python using Conda
 
 on: [push]
 
@@ -10,10 +10,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python 3.7
-      uses: actions/setup-python@v3
-      with:
-        python-version: '3.7'
     - name: Add conda to system path
       run: |
         # $CONDA is an environment variable pointing to the root of the miniconda directory
@@ -23,12 +19,10 @@ jobs:
         conda env update --file env/LINUX/environment.yml --name base
     - name: Lint with flake8
       run: |
-        conda install flake8
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        conda install pytest
         pytest
