--- a/.github/workflows/test-python-conda.yml
+++ b/.github/workflows/test-python-conda.yml
@@ -25,6 +25,7 @@ jobs:
     - name: Create Conda environment
       run: |
         conda env create -n quantumoonlight -f env/LINUX/environment.yml
+        conda activate quantumoonlight
 
     - name: Set up MySQL
       uses: mirromutth/mysql-action@v1.1
@@ -35,10 +36,8 @@ jobs:
         mysql user: root
         mysql password: root
 
-
-    - name: Run database tests
+    - name: Run tests
       run: |
-        conda activate quantumoonlight
         pytest
 
     - name: Clean up
