--- a/.github/workflows/test-python-conda.yml
+++ b/.github/workflows/test-python-conda.yml
@@ -30,6 +30,7 @@ jobs:
 
     - shell: bash
       run: |
+        conda init bash
         conda activate env quantumoonlight
         conda info
         conda list
