--- a/.github/workflows/test-python-conda.yml
+++ b/.github/workflows/test-python-conda.yml
@@ -30,8 +30,7 @@ jobs:
 
     - shell: bash
       run: |
-        conda init bash
-        conda activate env quantumoonlight
+        source activate quantumoonlight
         conda info
         conda list
    
