Test suite regression test CR#3.

--- a/pytest.ini
+++ b/pytest.ini
@@ -8,5 +8,12 @@ addopts = -v
 ;python_files =  test_ClassifyControl.py test_PreprocessingControl.py test_Validazione.py
 
 ;Test Suite per regression test CR#2
+;pytest_plugins = pytest_ordering
+;python_files = test_GestioneControl.py test_UtenteControl.py test_BlogControl.py
+
+;Test Suite per modifica CR#3
+;python_files= test_routes.py
+
+;Test Suite per regression test CR#3
 pytest_plugins = pytest_ordering
-python_files = test_GestioneControl.py test_UtenteControl.py test_BlogControl.py
+python_files =  test_ClassifyControl.py test_GestioneControl.py test_PreprocessingControl.py test_UtenteControl.py test_Validazione.py test_BlogControl.py
